# video-to-subtitle-summary-skill

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MCP_SERVER_GUIDE.md  README.md  README_en.md  SKILL.md  USAGE_EXAMPLES.md  UVX_VERIFICATION.md  install_as_uvx.py  mcp_server.py  pyproject.toml  run_mcp_server.py  test_mcp_server.py
references/: pitfalls.md
scripts/: __init__.py  transcribe_sherpa_onnx.py  video_to_summary.py
video_to_subtitle_summary_skill_mcp/: __init__.py  mcp_server.py  run_mcp_server.py  transcribe_sherpa_onnx.py  video_processor.py
