[project]
name = "video-to-subtitle-summary-skill"
version = "2.0.0"
description = "MCP stdio server for video-to-subtitle-summary-skill — async task mode, extracts subtitles and generates AI summaries from videos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ultrasev", email = "sev@sev.ai"},
]
dependencies = [
    "mcp>=1.0.0",
    "sherpa-onnx>=1.0.0",
    "numpy>=1.20.0",
]

[project.scripts]
video-to-subtitle-summary-skill = "run_mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run_mcp_server", "mcp_server"]
